# ComputerWorkshop

./: CMakeLists.txt  README.md  assets.qrc  computerworkshop.xml  main.cpp
config/: config.cpp  config.h  configparser.cpp  configparser.h  databasesettings.h
model/: appdata.cpp  appdata.h  reporter.cpp  reporter.h
model/entities/: annexembeddedservice.h  annexorderedsparepart.h  branch.h  client.h  contract.h  contractannex.h  embeddedservice.h  employee.h  entities.h  entity.h  fields.h  right.h  user.h  userdata.h
model/entities/validators/: commonvalidators.cpp  commonvalidators.h  datetimevalidator.cpp  datetimevalidator.h  nullvalidator.cpp  nullvalidator.h
model/query_builders/: columnfilter.cpp  columnfilter.h  deletequerybuilder.cpp  deletequerybuilder.h  filteredquery.h  insertquerybuilder.cpp  insertquerybuilder.h  query_args_storable.h  query_builders.h  selectquerybuilder.cpp  selectquerybuilder.h  updatequerybuilder.cpp  updatequerybuilder.h
model/services/auth/: auth.cpp  auth.h  autherrorcode.h
model/services/database/: database.cpp  database.h  initial_script.cpp
model/services/entitycontext/: entitycontext.h  entityoperationerror.h  entityoperationerrorcode.h  operationrighttype.h
model/services/usersession/: usersession.cpp  usersession.h
presenters/: authpresenter.h  commoneditplaceholders.h  entitypresenter.h  entitypresenterbase.h  entitypresenters.h  presenters.h
presenters/errors/: errormessagebuilder.h
presenters/lookups/: entitieslookup.h  entityidaliaseslookup.h  lookupbase.h  lookups.h  operationrightnameslookup.h  staticlookup.h
root/: shop.cpp  shop.h
views/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  authform.cpp  authform.h  authform.ui  columnseditdialog.cpp  columnseditdialog.h  columnseditdialog.ui  entityeditorform.cpp  entityeditorform.h  entityeditorform.ui  entityobjecteditform.cpp  entityobjecteditform.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  types.h  userinfodialog.cpp  userinfodialog.h  userinfodialog.ui
views/datainputs/: datainputbase.h  datainputs.h  datainputtype.h  editinput.h  lookupinput.h
